@@ -1,4 +1,7 @@
 
+SVN
+- working towards printing more than one track at once
+
 1.1.3
 - improved vector implementation, fixing possible problems on 64-bits machines
 - improved 'follow playback'
